--- a/View/Condition/Case/CaseFirstOption/CaseFirstOptionView.xaml
+++ b/View/Condition/Case/CaseFirstOption/CaseFirstOptionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Flowchart_Editor.View.ConditionCaseSecondOption.ConditionCaseSecondOption"
+﻿<UserControl x:Class="Flowchart_Editor.View.CaseFirstOptionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,39 +28,31 @@
             X1="70"
             Y1="70"
             X2="70"
-            Y2="80"
+            Y2="160"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
-        <Line 
-            X1="0"
-            Y1="80"
-            X2="140"
-            Y2="80"
-            StrokeThickness="1"
-            Style="{DynamicResource LineStyle}"/>
-
-        <Line 
-            X1="0"
-            Y1="80"
-            X2="0"
-            Y2="100"
-            StrokeThickness="1"
-            Style="{DynamicResource LineStyle}"/>
-        
         <Line 
             X1="70"
-            Y1="80"
-            X2="70"
+            Y1="100"
+            X2="140"
             Y2="100"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
         <Line 
-            X1="140"
-            Y1="80"
+            X1="70"
+            Y1="130"
             X2="140"
-            Y2="100"
+            Y2="130"
+            StrokeThickness="1"
+            Style="{DynamicResource LineStyle}"/>
+
+        <Line 
+            X1="70"
+            Y1="160"
+            X2="140"
+            Y2="160"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
