--- a/View/Condition/Case/CaseSecondOption/CaseSecondOptionView.xaml
+++ b/View/Condition/Case/CaseSecondOption/CaseSecondOptionView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Flowchart_Editor.View.ConditionCaseFirstOption.ConditionCaseFirstOption"
+﻿<UserControl x:Class="Flowchart_Editor.View.CaseSecondOptionView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,31 +28,39 @@
             X1="70"
             Y1="70"
             X2="70"
-            Y2="160"
+            Y2="80"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
         <Line 
-            X1="70"
-            Y1="100"
+            X1="0"
+            Y1="80"
             X2="140"
+            Y2="80"
+            StrokeThickness="1"
+            Style="{DynamicResource LineStyle}"/>
+
+        <Line 
+            X1="0"
+            Y1="80"
+            X2="0"
             Y2="100"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
         <Line 
             X1="70"
-            Y1="130"
-            X2="140"
-            Y2="130"
+            Y1="80"
+            X2="70"
+            Y2="100"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
         <Line 
-            X1="70"
-            Y1="160"
+            X1="140"
+            Y1="80"
             X2="140"
-            Y2="160"
+            Y2="100"
             StrokeThickness="1"
             Style="{DynamicResource LineStyle}"/>
 
