--- a/View/Menu/Edblock.xaml
+++ b/View/Menu/Edblock.xaml
@@ -10,16 +10,37 @@
         Height="1200" 
         Width="1820">
     <Window.Resources>
-        <Style x:Key="Style" TargetType="StackPanel">
+        <Style x:Key="StyleStackPanel" TargetType="StackPanel">
             <Style.Triggers>
-                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsSelected}" Value="True">
-                    <Setter Property="Background" Value="#FF262427" />
+                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="True">
+                    <Setter Property="Background" Value="#212121" /> 
+                </DataTrigger>
+                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="False">
+                    <Setter Property="Background" Value="#f5f5f5" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="StyleGridMenu" TargetType="Grid">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="True">
+                    <Setter Property="Background" Value="#212121" />
+                </DataTrigger>
+                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="False">
+                    <Setter Property="Background" Value="#f5f5f5" />
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+        <Style x:Key="StyleGridEditField" TargetType="Canvas">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="True">
+                    <Setter Property="Background" Value="#1c1c1c" />
                 </DataTrigger>
                 <DataTrigger Binding="{Binding  ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="False">
                     <Setter Property="Background" Value="#FFF9F9FB" />
                 </DataTrigger>
             </Style.Triggers>
         </Style>
+
         <Storyboard x:Key="CloseMenu">
             <DoubleAnimationUsingKeyFrames 
                 Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" 
@@ -45,11 +66,11 @@
     </Window.Triggers>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="50"/>
+            <ColumnDefinition Width="56"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="55"/>
+            <RowDefinition Height="52"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
@@ -77,25 +98,15 @@
                     VerticalAlignment="Center"/>
 
                 <ComboBox 
+                    
                     Name="listFontSize" 
                     SelectedValue="{Binding Path=FontFamily}"
                     Loaded="listFontSize_Loaded"
                     HorizontalAlignment="Center"
-                    Foreground="Black" 
+                    
                     IsEditable="True" 
-                    Width="40">
-                    <!--<ComboBoxItem>8</ComboBoxItem>
-                    <ComboBoxItem>10</ComboBoxItem>
-                    <ComboBoxItem>12</ComboBoxItem>
-                    <ComboBoxItem>14</ComboBoxItem>
-                    <ComboBoxItem>16</ComboBoxItem>
-                    <ComboBoxItem>18</ComboBoxItem>
-                    <ComboBoxItem>20</ComboBoxItem>
-                    <ComboBoxItem>22</ComboBoxItem>
-                    <ComboBoxItem>24</ComboBoxItem>
-                    <ComboBoxItem>26</ComboBoxItem>-->
-                    <ComboBoxItem Content="28"></ComboBoxItem>
-                </ComboBox>
+                    Width="40"/>
+
 
 
 
@@ -128,7 +139,7 @@
                     SelectedValue="{Binding Path=BlockWidth}"
                     Loaded="listWidthBlock_Loaded"
                     HorizontalAlignment="Center"
-                    Foreground="Black" 
+                    
                     IsEditable="True" 
                     Width="130"/>
 
@@ -142,10 +153,12 @@
                     Name="listHeightBlock"
                     SelectedValue="{Binding Path=BlockHeight}"
                     Loaded="listHeightBlock_Loaded"
-                    Foreground="Black" 
+                  
                     IsEditable="True" 
                     Width="60" 
                     HorizontalAlignment="Center"/>
+
+                <Separator />
 
                 <materialDesign:PopupBox 
                     StaysOpen="True">
@@ -158,7 +171,7 @@
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="40"/>
                         </Grid.RowDefinitions>
-                        
+
                         <TextBlock
                             HorizontalAlignment="Left"
                             VerticalAlignment="Center"
@@ -197,13 +210,24 @@
 
                     </Grid>
                 </materialDesign:PopupBox>
-
+                
             </ToolBar>
         </ToolBarTray>
 
-        <StackPanel Grid.Column="0" Grid.Row="1" Background="#f5f5f5">
-            <Button x:Name="ButtonOpen" Margin="5 0" HorizontalAlignment="Left" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="{x:Null}" Width="40" Height="40" Padding="0">
-                <materialDesign:PackIcon Kind="FlowchartOutline" Foreground="Black" Width="25" Height="25"/>
+        <StackPanel Grid.Column="0" Grid.Row="1" Style="{StaticResource StyleStackPanel}">
+            <Button x:Name="ButtonOpen" HorizontalAlignment="Center" Background="{x:Null}" BorderBrush="{x:Null}" Width="40" Height="40" Padding="0">
+                <materialDesign:PackIcon Kind="FlowchartOutline" Width="25" Height="25">
+                    <materialDesign:PackIcon.Style>
+                        <Style TargetType="materialDesign:PackIcon">
+                            <Setter Property="Foreground" Value="#212121" />
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding ElementName=toggleButtonStyleTheme, Path=IsChecked}" Value="True">
+                                    <Setter Property="Foreground" Value="#f5f5f5" />
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </materialDesign:PackIcon.Style>
+                </materialDesign:PackIcon>
             </Button>
         </StackPanel>
 
@@ -216,10 +240,11 @@
                         Name="editField" 
                         Grid.Row="1" 
                         Grid.Column="1"
-                       Background="White"
+            Style="{StaticResource StyleGridEditField}"
+                       
                        />
 
-        <Grid Background="#f5f5f5" x:Name="GridMenu" Width="350" HorizontalAlignment="Left" Margin="-350 0 0 0" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
+        <Grid Style="{StaticResource StyleGridMenu}" x:Name="GridMenu" Width="350" HorizontalAlignment="Left" Margin="-350 0 0 0" Grid.Row="1" RenderTransformOrigin="0.5,0.5">
             <Grid.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -229,7 +254,7 @@
                 </TransformGroup>
             </Grid.RenderTransform>
             <ScrollViewer>
-                <Grid>
+                <Grid  >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="75"/>
                         <RowDefinition Height="75"/>
