--- a/View/Menu/ToolBar/FormatText.xaml
+++ b/View/Menu/ToolBar/FormatText.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Flowchart_Editor.View.Menu.ToolBar.FormatAlign"
+﻿<UserControl x:Class="Flowchart_Editor.View.Menu.ToolBar.FormatText"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,15 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <ListBox SelectedIndex="1">
-            <ListBoxItem
-                Content="{materialDesign:PackIcon Kind=FormatAlignLeft}" />
-            <ListBoxItem
-                Content="{materialDesign:PackIcon Kind=FormatAlignCenter}" />
-            <ListBoxItem
-                Content="{materialDesign:PackIcon Kind=FormatAlignRight}" />
-            <ListBoxItem
-                Content="{materialDesign:PackIcon Kind=FormatAlignJustify}" />
+        <ListBox SelectionMode="Extended">
+            <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatBold}"/>
+            <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatItalic}"/>
+            <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatUnderline}"/>
         </ListBox>
     </Grid>
 </UserControl>
