--- a/View/Menu/ToolBar/FormatAlign.xaml
+++ b/View/Menu/ToolBar/FormatAlign.xaml
@@ -3,12 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <ListBox SelectedIndex="1">
             <ListBoxItem
+                Name="FormatAlignLeft"
                 Content="{materialDesign:PackIcon Kind=FormatAlignLeft}"/>
             <ListBoxItem
                 Content="{materialDesign:PackIcon Kind=FormatAlignCenter}" />
