Added highlighting of the connection point at the moment of hovering and drawing of the line when pressing and holding the connection point

--- a/View/Menu/Edblock.xaml
+++ b/View/Menu/Edblock.xaml
@@ -221,6 +221,9 @@
         </StackPanel>
 
         <Canvas
+            MouseMove="editField_MouseMove"
+            MouseLeave="editField_MouseLeave"
+            MouseUp="editField_MouseUp"
             AllowDrop="True" 
             DragOver="DragOverDestination" 
             Drop="DropDestination"
